--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -1,6 +1,6 @@
 {
   "name": "tianji",
-  "main": "src/index.tsx",
+  "main": "index.tsx",
   "compatibility_date": "2025-12-17",
   "env": {
     "production": {
